--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ clap = { version = "4.5.20", default-features = false, features = [
     "help",
     "std"
 ] }
+http-body-util = "0.1.2"
 serde = { version = "1.0.214", default-features = false, features = [
     "derive"
 ] }
