feat: Integrate OpenAI crate (#5)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-openai = { version = "0.25.0", default-features = false, features = [
+    "rustls"
+] }
 axum = { version = "0.7.7", default-features = false, features = [
     "http1",
     "json",
