--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-openai = { version = "0.25.0", default-features = false, features = [
+async-openai = { version = "0.26.0", default-features = false, features = [
     "rustls"
 ] }
 axum = { version = "0.7.7", default-features = false, features = [
@@ -30,7 +30,10 @@ clap = { version = "4.5.20", default-features = false, features = [
     "std"
 ] }
 http-body-util = "0.1.2"
-serde = { version = "1.0.214", default-features = false, features = [
+minicaldav = { version = "0.8.0", features = [
+    "serde"
+] }
+serde = { version = "1.0.215", default-features = false, features = [
     "derive"
 ] }
 serde_json = "1.0.132"
@@ -56,6 +59,8 @@ tracing-subscriber = { version = "0.3.18", default-features = false, features = 
     "env-filter",
     "fmt"
 ] }
+ureq = "2.10.1"
+url = "2.5.3"
 
 [profile.release]
 lto = true
